--- a/beta/app-ios-ipados-macos/index.html
+++ b/beta/app-ios-ipados-macos/index.html
@@ -7,11 +7,11 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Membership behind the scenes in wildlife art." />
+  <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat societ&amacr;s. Registration. &ndash;&nbsp;Enregistrement.</title>
+  <title>Animat Habitat beta. Registration. &ndash;&nbsp;Enregistrement.</title>
 
   <style>
     html { background-color: #333; }
@@ -30,9 +30,9 @@
   <nav>
     <ul class="page">
       <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb dark"><a href="../" title="Animat Habitat societ&amacr;s.">Societ&amacr;s</a></li>
+      <li class="crumb dark"><a href="../" title="Animat Habitat beta.">Beta</a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="crumb scene dark"><a><em>&hellip;</em></a></li>
+      <li class="crumb scene dark"><a><em>App</em></a></li>
     </ul>
   </nav>
 
@@ -42,19 +42,18 @@
       <div class="clear" id="register" spellcheck="false">
 
         <div>
-          <h3 class="letterhead">Behind-the-scenes at Animat Habitat&hellip;<font class="fr"><br>Dans les coulisses chez Animat Habitat&hellip;</font></h3>
+          <h3 class="letterhead">Beta App on iOS, iPadOS and macOS<font class="fr"><br>Application b&ecirc;ta sur iOS, iPadOS et macOS</font></h3>
           <ul class="square">
-            <li>Letters from the editor of project broadcasts.<font class="fr">&nbsp;&#92;&nbsp;Lettres de l'&eacute;diteur des mises &agrave; jour du projet.</font></li>
-            <li>Previews of artworks and exhibitions of work.<font class="fr">&nbsp;&#92;&nbsp;Avant-premi&egrave;res d'&oelig;uvres d'art et d'expositions d'&oelig;uvres.</font></li>
+            <li>Preview the <em>White Elephant</em> comic book, its companion app and its interactive story.<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;visualisez la bande dessin&eacute;e <em>White Elephant</em>, son application compagnon et son histoire interactive.</font></li>
+            <li>Provide feedback to help us develop the commercial version of the companion app.<font class="fr">&nbsp;&#92;&nbsp;Fournissez vos commentaires pour nous aider &agrave; d&eacute;velopper la version commerciale de l’application compagnon.</font></li>
 
           </ul>
 
-          <!-- <h5 class="linebreak">Behind-the-scenes at Animat Habitat&hellip;<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses&hellip;</font></h5> -->
-          <p class="linebreak">Register your name and address to get behind-the-scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom et votre adresse pour entrer dans les coulisses de la nature.</font></p>
+          <p class="linebreak">Add your name to the beta program waiting list for Apple iPhone, iPad or Mac users.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom &agrave; la file d'attente du programme b&ecirc;ta pour les utilisateurs Apple iPhone, iPad ou Mac.</font></p>
 
         </div>
 
-        <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A52FB6D182F7A8A669AB1C317E182AD3763A1B775C7C4E900069B5F6BE1E4B7A7B42258404945BDA2B8796E1BC8516FAF">
+        <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1AB37BC75F487152E8E6BCA08B7CD9E943DE33A7E521BC441883AB1AB956F7C2B24DAD52F1FBA11EEFE659F61970A1F946">
           <div class="clear-top">
             <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name&nbsp;&#92;&nbsp;Nom et pr&eacute;nom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value=='Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
           </div>
@@ -71,10 +70,13 @@
           <p class="small">A verification e-mail will be sent to the address provided.<font class="fr">&nbsp;&#92;&nbsp;Un e-mail de v&eacute;rification sera envoy&eacute; &agrave; l'adresse fournie.</font></p>
 
         </div>
+
       </div>
 
     </article><br class="clear">
 	</section>
+
+  <footer></footer>
 
 </body>
 
