--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -88,7 +88,7 @@
         <p>Scheduled for December<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;vu pour d&eacute;cembre</font> 2024.</p>
         <!-- <p>28 pages.</p> -->
 
-        <p class="linebreak">Journey with an elephant across a sea of sand: <em>White Elephant</em> is an e-book and a limited edition print that comes to life with a companion app. This publication is first in a series of scenes in wildlife art at Animat Habitat. <em>White Elephant</em>&mdash;the comic book is available for pre-order as a first-edition paperback.<font class="fr">&nbsp;&#92;&nbsp;Voyage avec un &eacute;l&eacute;phant &agrave; travers une mer de sable&nbsp;: <em>&Eacute;l&eacute;phant blanc</em> est un publication num&eacute;rique et une &eacute;dition limit&eacute;e qui prend vie avec l'app qui l'accompagne. Cette publication est la premi&egrave;re d'une s&eacute;rie de projets chez Animat Habitat. La bande dessin&eacute;e est pr&ecirc;t &agrave; pr&eacute;commander en tant que premi&egrave;re &eacute;dition broch&eacute;.</font></p>
+        <p class="linebreak">Journey with an elephant across a sea of sand: <em>White Elephant</em> is an e-book and a limited edition print that comes to life with a companion app. This publication is first in a series of scenes in wildlife art at Animat Habitat. <em>White Elephant</em>&mdash;the comic book is available for pre-order as a first-edition paperback.<font class="fr">&nbsp;&#92;&nbsp;Voyage avec un &eacute;l&eacute;phant &agrave; travers une mer de sable&nbsp;: <em>&Eacute;l&eacute;phant blanc</em> est un publication num&eacute;rique et une &eacute;dition limit&eacute;e qui prend vie avec l'application compagnon. Cette publication est la premi&egrave;re d'une s&eacute;rie de projets chez Animat Habitat. La bande dessin&eacute;e est pr&ecirc;t &agrave; pr&eacute;commander en tant que premi&egrave;re &eacute;dition broch&eacute;.</font></p>
 
         <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/1432/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Okavango Delta">Okavango Delta</a></h5> -->
 
@@ -218,8 +218,8 @@
     <article>
       <div class="project-broadcast quote">
 
-        <!-- <h3><a href="companion-app-beta/"><font class="scene-one">Companion App &ndash; Beta</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
-        <pre class="thin"></pre> -->
+        <h3><a href="companion-app-beta/"><font class="scene-one">Companion App &ndash; Beta</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <pre class="thin"></pre>
 
         <!-- <h3><a href="companion-app-augmented-reality-kit/"><font class="scene-one">Augmented Reality Kit</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
         <pre class="thin"></pre> -->
