--- a/scene/one/companion-app-beta/index.html
+++ b/scene/one/companion-app-beta/index.html
@@ -51,18 +51,18 @@
         <h3 class="linebreak">Beta Program</h3>
         <p>Our beta program aims to assess accessiblility of the companion app interface design, in general, and of the interactive story mode, in particular. That aim, stated more simply, is to make this experience more accessible to more people. Also given an objective to collect a balanced range of feedback from, again simply, a sample of people who operate an Apple iPhone, this limited beta program obliges we share the beta version of our companion app with a broad demographic within that select audience.</p>
 
-        <p class="linebreak">Those people who are included in our beta program will be among the first to entertain the companion app, the <em>White Elephant</em> comic book and its interactive story. Any constructive feedback surveyed from this program will help to shape the commercial version of the companion app. We hope to hear from a diversity of voices. We hope to hear from you. Membership to this beta program is made available only to people registered in a beta program waiting room at Animat Habitat. Enter <a href="../../../beta/" title="">Beta Programs</a>.</p>
+        <p class="linebreak">Those people who are included in our beta program will be among the first to entertain the companion app, the <em>White Elephant</em> comic book and its interactive story. Any constructive feedback surveyed from this program will help to shape the commercial version of the companion app. We hope to hear from a diversity of voices. We hope to hear from you. Membership to this beta program is made available only to people registered in a beta program waiting room at Animat Habitat. Enter <a href="../../../beta/" title="Animat Habitat beta.">Beta Programs</a>.</p>
 
         <h5 class="linebreak">Beta App on iOS, iPadOS and macOS</h5>
-        <p>Add your name to the beta program waiting room for Apple iPhone, iPad or Mac users: <a href="../../../beta/app-ios-ipados-macos/" title="">Beta Room</a>.</p>
+        <p>Add your name to the beta program waiting room for Apple iPhone, iPad or Mac users: <a href="../../../beta/app-ios-ipados-macos/" title="Beta: Companion App on iOS, iPadOS and macOS" target="_blank">Beta Room</a>.</p>
 
         <h5 class="linebreak">Beta App on Android</h5>
         <p>The beta program for Android users is to be determined.</p>
 
         <h5 class="linebreak">Beta App Feedback</h5>
-        <p>We welcome your feedback! Your input is invaluable in helping to develop a better experience for everyone who discovers the <em>White Elephant</em> comic book and its companion app later on. If you find any bugs in a beta version of the companion app, or have suggestions for an improvement, please use our dedicated feedback form for beta versions of the companion app: <a>Beta App Feedback Form</a>.</p>
+        <p>We welcome your feedback! Your input is invaluable in helping to develop a better experience for everyone who discovers the <em>White Elephant</em> comic book and its companion app later on. If you find any bugs in a beta version of the companion app, or have suggestions for an improvement, please use our dedicated feedback form for beta versions of the companion app: <a href="../../../beta/feedback/" title="Beta: Companion App Feedback Form" target="_blank">Beta App Feedback Form</a>.</p>
 
-        <p class="linebreak">For anything related to a beta version of the companion app, please feel free to send specific feedback to the beta program development office at Animat Habitat [<a>beta&ndash;animathabitat.org</a>].</p>
+        <p class="linebreak">For anything related to a beta version of the companion app, please feel free to send specific feedback to the beta program development office at Animat Habitat [<a href="mailto:beta@animathabitat.org" title="Address of the beta program development office at Animat Habitat." target="_blank" rel="noopener">beta&ndash;animathabitat.org</a>].</p>
 
       </div>
 
@@ -91,7 +91,7 @@
       </div>
 
       <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup> Access to any beta version of the companion app on iOS, iPadOS and macOS is limited by the number of internal test memberships available to a developer account at Apple. Membership to our beta program is queued, and made available only to people registered in a beta program waiting room at Animat Habitat [<a href="../../../beta/app-ios-ipados-macos/" title="">Beta Room</a>].</p>
+        <p class="small"><sup>1</sup> Access to any beta version of the companion app on iOS, iPadOS and macOS is limited by the number of internal test memberships available to a developer account at Apple. Membership to our beta program is queued, and made available only to people registered in a beta program waiting room at Animat Habitat [<a href="../../../beta/app-ios-ipados-macos/" title="Beta: Companion App on iOS, iPadOS and macOS" target="_blank">Beta Room</a>].</p>
 
       </div>
 
