--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -218,8 +218,8 @@
     <article>
       <div class="project-broadcast quote">
 
-        <h3><a href="companion-app-beta/"><font class="scene-one">Companion App &ndash; Beta</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
-        <pre class="thin"></pre>
+        <!-- <h3><a href="companion-app-beta/"><font class="scene-one">Companion App &ndash; Beta</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <pre class="thin"></pre> -->
 
         <!-- <h3><a href="companion-app-augmented-reality-kit/"><font class="scene-one">Augmented Reality Kit</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
         <pre class="thin"></pre> -->
