--- a/app/beta/ios-ipados/index.html
+++ b/app/beta/ios-ipados/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat beta. Registration. &ndash;&nbsp;Enregistrement.</title>
+  <title>Animat Habitat app. Beta &ndash;&nbsp;B&ecirc;ta. Registration. &ndash;&nbsp;Enregistrement.</title>
 
   <style>
     html { background-color: #333; }
@@ -19,9 +19,9 @@
   </style>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
-  <link rel="stylesheet" href="../../inc/css/dark.light.unicorn.css" />
+  <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
-  <link rel="icon" href="../../inc/ico/animat.mark.1.1.72.light.png" />
+  <link rel="icon" href="../../../inc/ico/animat.mark.1.1.72.light.png" />
 
 </head>
 
@@ -29,7 +29,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb dark logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../" title="Animat Habitat beta.">Beta</a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <li class="crumb scene dark"><a><em>App</em></a></li>
@@ -42,14 +42,14 @@
       <div class="clear" id="register" spellcheck="false">
 
         <div>
-          <h3 class="letterhead">Beta App on iOS, iPadOS and macOS<font class="fr"><br>Application b&ecirc;ta sur iOS, iPadOS et macOS</font></h3>
+          <h3 class="letterhead">Beta App on iOS and iPadOS<font class="fr"><br>Application b&ecirc;ta sur iOS et iPadOS</font></h3>
           <ul class="square">
             <li>Preview the <em>White Elephant</em> comic book, its companion app and its interactive story.<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;visualisez la bande dessin&eacute;e <em>White Elephant</em>, son application compagnon et son histoire interactive.</font></li>
             <li>Provide feedback to help us develop the commercial version of the companion app.<font class="fr">&nbsp;&#92;&nbsp;Fournissez vos commentaires pour nous aider &agrave; d&eacute;velopper la version commerciale de l’application compagnon.</font></li>
 
           </ul>
 
-          <p class="linebreak">Add your name to the beta program waiting list for Apple iPhone, iPad or Mac users.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom &agrave; la file d'attente du programme b&ecirc;ta pour les utilisateurs Apple iPhone, iPad ou Mac.</font></p>
+          <p class="linebreak">Add your name to the beta program waiting list for Apple iPhone or iPad users.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom &agrave; la file d'attente du programme b&ecirc;ta pour les utilisateurs Apple iPhone ou iPad.</font></p>
 
         </div>
 
