--- a/app/beta/index.html
+++ b/app/beta/index.html
@@ -11,14 +11,14 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat beta.</title>
+  <title>Animat Habitat app. Beta &ndash;&nbsp;B&ecirc;ta.</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
-  <link rel="stylesheet" href="../inc/css/dark.light.unicorn.css" />
+  <link rel="stylesheet" href="../../inc/css/dark.light.unicorn.css" />
 
-  <link rel="icon" href="../inc/ico/animat.mark.1.1.72.light.png" />
+  <link rel="icon" href="../../inc/ico/animat.mark.1.1.72.light.png" />
 
   <style>
     html { background-color: #333; }
@@ -31,7 +31,8 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb dark logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <!-- <li class="crumb dark"><a href="../" title="Animat Habitat app.">App</a></li> -->
       <li class="crumb active dark"><a><em>Beta</em></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
@@ -44,8 +45,11 @@
         <h2 class="letterhead">Beta Programs<font class="fr">&nbsp;&#92;&nbsp;Programmes b&ecirc;ta</font></h2>
         <p><em>Welcome to the beta programs at Animat Habitat.</em><font class="fr">&nbsp;&#92;&nbsp;<em>Bienvenue aux programmes b&ecirc;ta chez Animat Habitat.</em></font></p>
 
-        <h5 class="linebreak">Beta App on iOS, iPadOS and macOS<font class="fr">&nbsp;&#92;&nbsp;Application b&ecirc;ta sur iOS, iPadOS et macOS</font></h5>
-        <p>Add your name to the beta program waiting room for Apple iPhone, iPad or Mac users: <a href="app-ios-ipados-macos/" title="">Beta Room</a>.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom &agrave; la file d'attente du programme b&ecirc;ta pour les utilisateurs Apple iPhone, iPad ou Mac.</font></p>
+        <h5 class="linebreak">Beta App on iOS and iPadOS<font class="fr">&nbsp;&#92;&nbsp;Application b&ecirc;ta sur iOS et iPadOS</font></h5>
+        <p>Add your name to the beta program waiting room for Apple iPhone or iPad users: <a href="ios-ipados/" title="Beta: Companion App on iOS and iPadOS">Beta Room</a>.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom &agrave; la file d'attente du programme b&ecirc;ta pour les utilisateurs Apple iPhone ou iPad.</font></p>
+
+        <h5 class="linebreak">Beta App on macOS<font class="fr">&nbsp;&#92;&nbsp;Application b&ecirc;ta sur macOS</font></h5>
+        <p>The beta program for macOS users is to be determined.<font class="fr">&nbsp;&#92;&nbsp;Le programme b&ecirc;ta pour les utilisateurs de macOS reste &agrave; d&eacute;terminer.</font></p>
 
         <h5 class="linebreak">Beta App on Android<font class="fr">&nbsp;&#92;&nbsp;Application b&ecirc;ta sur Android</font></h5>
         <p>The beta program for Android users is to be determined.<font class="fr">&nbsp;&#92;&nbsp;Le programme b&ecirc;ta pour les utilisateurs d’Android reste &agrave; d&eacute;terminer.</font></p>
