--- a/app/beta/confirmation/1/index.html
+++ b/app/beta/confirmation/1/index.html
@@ -2,7 +2,7 @@
 <html lang="en, fr">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" />
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
   <meta name="google" content="notranslate" />
 
   <meta name="author" content="Dane Aleksander" />
@@ -26,7 +26,7 @@
     <ul class="page">
       <li class="crumb dark logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../../" title="Animat Habitat beta.">Beta</a></li>
-      <li class="crumb scene dark"><a><em>Welcome<font class="desktop"> &ndash; Bienvenue</font></em></a></li>
+      <li class="crumb scene dark"><a><em>Welcome<font class="desktop fr"> &ndash; Bienvenue</font></em></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -35,18 +35,12 @@
     <article>
 
       <div>
-        <h3 class="letterhead">Thanks for being here on this journey.<font class="fr">&nbsp;&#92;&nbsp;Merci d'&ecirc;tre ici pour ce voyage.</font></h3>
+        <h3 class="letterhead">Welcome into the beta program queue.<font class="fr">&nbsp;&#92;&nbsp;Bienvenue dans la file d'attente du programme b&ecirc;ta.</font></h3>
 
         <h5 class="linebreak">You have registered successfully.<font class="fr">&nbsp;&#92;&nbsp;Vous vous &ecirc;tes bien inscrit.</font></h5>
-        <p>For active and select council members, you can find documents of the organization archived and classified in the Animat Habitat <a href="../../../" title="Animat Habitat societ&amacr;s.">Member Handbook</a>. For members of a project broadcast, a behind-the-scenes campaign will be delivered to your inbox in advance of project publications. You can find articles at Animat Habitat archived on the project pages.<font class="fr">&nbsp;&#92;&nbsp;Pour les membres actifs, retrouvez les documents d'organisation archiv&eacute;s et class&eacute;s dans le manuel des membres Animat Habitat. Pour les membres des mises &agrave; jour d'un projet, la campagne dans les coulisses sera livr&eacute;e &agrave; votre address e-mail en avance de la publication du projet. Veuillez trouver les articles chez Animat Habitat archiv&eacute;s sur les pages du projet.</font></p>
+        <p>For active members of our beta programs, a survey campaign will be delivered to your inbox as a mechanism for you to provide feedback. If you find any bugs in a beta version of the companion app, or have suggestions for an improvement, we welcome your feedback through our dedicated feedback form for beta versions of the companion app.<font class="fr">&nbsp;&#92;&nbsp;Pour les membres actifs d'un programme b&ecirc;ta chez Animat Habitat, une campagne d'enqu&ecirc;te sera livr&eacute;e &agrave; votre address e-mail pour vous permettre de fournir des commentaires. Si vous rencontrez des probl&egrave;mes dans une version b&ecirc;ta de l'application compagnon ou si vous avez des suggestions d'am&eacute;lioration, nous appr&eacute;cions vos commentaires via notre formulaire de commentaires d&eacute;di&eacute; aux versions b&ecirc;ta de l'application compagnon.</font></p>
 
-        <h5 class="linebreak scene-one title">I. White Elephant</h5>
-        <p>Animat Habitat <a href="../../../../scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
-        <p>Animat Habitat Scene One &ndash; <a href="../../../../scene/one/making-of-ella/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
-
-        <h5 class="linebreak scene-two title">II. White Tiger</h5>
-        <p>Animat Habitat <a href="../../../../scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
-        <p>Animat Habitat Scene Two &ndash; <a href="../../../../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
+        <p class="linebreak">Beta: Companion App <a href="../../../" title="Beta: Companion App Feedback Form">Feedback Form</a><font class="fr">&nbsp;&#92;&nbsp;Formulaire de commentaires sur l'application compagnon b&ecirc;ta.</font></p>
 
         <h5 class="linebreak">Join as a patron.<font class="fr">&nbsp;&#92;&nbsp;Rejoignez-nous en tant que m&eacute;c&egrave;ne.</font></h5>
         <p>Receive a certificate of membership as an annual patron of the studio or as a member of the Periwinkle Blue or Silver council at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Recevez un certificat d'adh&eacute;sion en tant que m&eacute;c&egrave;ne annuel du studio ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
@@ -60,7 +54,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Thanks again for your interest.<font class="fr">&nbsp;&#92;&nbsp;Merci encore pour votre int&eacute;r&ecirc;t.</font></p>
+      <p class="small">Thanks in advance for your participation.<font class="fr">&nbsp;&#92;&nbsp;Merci d'avance pour votre participation.</font></p>
 
       <p class="linebreak small">Exit through the <a href="../../../../boutique/" title="Animat Habitat boutique.">Boutique</a>.<font class="fr">&nbsp;&#92;&nbsp;Sortir par la boutique.</font></p>
     </div>
