--- a/app/beta/index.html
+++ b/app/beta/index.html
@@ -49,7 +49,7 @@
         <p>Add your name to the beta program waiting room for Apple iPhone or iPad users: <a href="ios-ipados/" title="Beta: Companion App on iOS and iPadOS">Beta Room</a>.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom &agrave; la file d'attente du programme b&ecirc;ta pour les utilisateurs Apple iPhone ou iPad.</font></p>
 
         <h5 class="linebreak">Beta App on macOS<font class="fr">&nbsp;&#92;&nbsp;Application b&ecirc;ta sur macOS</font></h5>
-        <p>The beta program for macOS users is to be determined.<font class="fr">&nbsp;&#92;&nbsp;Le programme b&ecirc;ta pour les utilisateurs de macOS reste &agrave; d&eacute;terminer.</font></p>
+        <p>The beta program for Apple Mac users is to be determined.<font class="fr">&nbsp;&#92;&nbsp;Le programme b&ecirc;ta pour les utilisateurs d'Apple Mac reste &agrave; d&eacute;terminer.</font></p>
 
         <h5 class="linebreak">Beta App on Android<font class="fr">&nbsp;&#92;&nbsp;Application b&ecirc;ta sur Android</font></h5>
         <p>The beta program for Android users is to be determined.<font class="fr">&nbsp;&#92;&nbsp;Le programme b&ecirc;ta pour les utilisateurs d’Android reste &agrave; d&eacute;terminer.</font></p>
