--- a/scene/one/companion-app-beta/index.html
+++ b/scene/one/companion-app-beta/index.html
@@ -57,7 +57,7 @@
         <p>Add your name to the beta program waiting room for Apple iPhone or iPad users: <a href="../../../app/beta/ios-ipados/" title="Beta: Companion App on iOS and iPadOS" target="_blank">Beta Room</a>.</p>
 
         <h5 class="linebreak">Beta App on macOS</h5>
-        <p>The beta program for macOS users is to be determined.</p>
+        <p>The beta program for Apple Mac users is to be determined.</p>
 
         <h5 class="linebreak">Beta App on Android</h5>
         <p>The beta program for Android users is to be determined.</p>
