--- a/patron/index.html
+++ b/patron/index.html
@@ -43,7 +43,8 @@
   <header>
     <div class="quote text-center">
       <h1 class="title"><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></h1>
-      <h3>Non-profit organization in Canada.<font class="fr">&nbsp;&#92;&nbsp;Organisation &agrave; but non lucratif au Canada.</font></h3>
+      <!-- <h3>Non-profit organization in Canada.<font class="fr">&nbsp;&#92;&nbsp;Organisation &agrave; but non lucratif au Canada.</font></h3> -->
+      <h3>Patrons of the scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Patrons des s&egrave;nes de l'art de la faune.</font></h3>
 
     </div>
 
