--- a/societas/r/confirmation/1/index.html
+++ b/societas/r/confirmation/1/index.html
@@ -48,8 +48,8 @@
         <p>Animat Habitat <a href="../../../../scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
         <p>Animat Habitat Scene Two &ndash; <a href="../../../../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
-        <h5 class="linebreak">Join as a patron.<font class="fr">&nbsp;&#92;&nbsp;Rejoignez-nous en tant que m&eacute;c&egrave;ne.</font></h5>
-        <p>Receive a certificate of membership as an annual patron of the studio or as a member of the Periwinkle Blue or Silver council at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Recevez un certificat d'adh&eacute;sion en tant que m&eacute;c&egrave;ne annuel du studio ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
+        <h5 class="linebreak">Join as a patron.<font class="fr">&nbsp;&#92;&nbsp;Rejoignez-nous en tant que patron.</font></h5>
+        <p>Receive a certificate of membership as an annual patron of the studio or as a member of the Periwinkle Blue or Silver council at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Recevez un certificat d'adh&eacute;sion annuel en tant que patron du studio ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
 
         <p class="linebreak">Animat Habitat <a href="../../../../patron/" title="Animat Habitat patronage.">Patron</a></p>
 
